--- a/app.yaml
+++ b/app.yaml
@@ -5,8 +5,8 @@
 runtime: python27
 # threadsafe is required but can be either true or 
 # false. For some package, it should be true e.g. Flask
-threadsafe: true
-
+threadsafe: false
+api_version: 1
 
 handlers:
 - url: /.*
